Teaser UI - fixed vertical-align of text

--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -131,11 +131,17 @@ footer {
 		background:-o-radial-gradient(center, ellipse cover,  #535353 0%,#000000 100%);
 		background:-ms-radial-gradient(center, ellipse cover,  #535353 0%,#000000 100%);
 		background:radial-gradient(ellipse at center,  #535353 0%,#000000 100%);
+		display:table;
 		font-size:.6em;		
 		left:0;
 		opacity:0;
+		padding:10px;
 		position:absolute;
 		top:0;
+		span {
+			display:table-cell;
+			vertical-align:middle;
+		}
 	}
 	a {
 		color:#fff;
